tdf#99973 - Crash when changing Locale Setting in options

regression from commit 0f672545 "clang-tidy modernize-loop-convert in
toolkit to uui", probably because the list is being modified while the
loop is executing

Change-Id: I18cd21001aee132e06d577c469aed5eb46a16a7f