unotools/source/config/options.cxx
@@ -68,9 +68,8 @@ void ConfigurationBroadcaster::NotifyListeners( sal_uInt32 nHint )
         nHint |= m_nBlockedHint;
         m_nBlockedHint = 0;
         if ( mpList ) {
-            for (ConfigurationListener* n : *mpList) {
-                n->ConfigurationChanged( this, nHint );
-            }
+            for ( size_t n = 0; n < mpList->size(); n++ )
+                (*mpList)[ n ]->ConfigurationChanged( this, nHint );
         }
     }
 }
